--- a/style.css
+++ b/style.css
@@ -3,9 +3,19 @@
 body {
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
+  background-image: url("https://cdn.glitch.com/56cf099d-e0e8-48ac-8400-14cd70ecef3c%2Fbttanos.webp?v=1573145255507") !important;
 }
 
 h1 {
   font-style: italic;
   color: #373fff;
+}
+.Betthanos {
+  position : Absolute;
+  top: 200px;
+  left: 400px;
+}
+.HAHA {
+  psotion: Absolute;
+  top: 100px;
 }
