--- a/style.css
+++ b/style.css
@@ -11,11 +11,13 @@ h1 {
   color: #373fff;
 }
 .Betthanos {
-  position : Absolute;
+  position: Absolute;
   top: 200px;
   left: 400px;
 }
-.HAHA {
-  psotion: Absolute;
-  top: 100px;
+#HAHA {
+  position: relative;
+  top: 650px;
+  left: 300px;
+  font-size: 40px;
 }
