--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ h1 {
 }
 .Betthanos {
   position: Absolute;
-  top: 200px;
-  left: 400px;
+  top: 50%;
+  left: 50%;
 }
 #HAHA {
   position: relative;
